--- a/karta5/.classpath
+++ b/karta5/.classpath
@@ -28,6 +28,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Spring/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Eclipse/spring/javax.servlet-3.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
