--- a/karta5/pom.xml
+++ b/karta5/pom.xml
@@ -171,6 +171,6 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>KartaWedkarska2_0</finalName>
+		<finalName>Karta5</finalName>
 	</build>
 </project>
