--- a/pom.xml
+++ b/pom.xml
@@ -29,18 +29,18 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-web</artifactId>
-          <version>4.0.4.RELEASE</version>
-      </dependency>
- 
-      <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-config%20-->
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-config</artifactId>
-          <version>4.0.4.RELEASE</version>
-      </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>4.0.4.RELEASE</version>
+		</dependency>
+
+		<!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-config%20 -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.0.4.RELEASE</version>
+		</dependency>
 
 
 
@@ -149,26 +149,32 @@
 			<version>${org.springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-		  <!-- MySQL JDBC driver -->
-      <!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java%20-->
-      <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>5.1.34</version>
-      </dependency>
+
+		<!-- MySQL JDBC driver -->
+		<!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java%20 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency> <groupId>javax.servlet.jsp</groupId> 
+		<artifactId>javax.servlet.jsp-api</artifactId> 
+			<version>2.3.2-b02</version> <scope>provided</scope> 
+			</dependency>
+
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>javax.servlet.jsp-api</artifactId>
-			<version>2.3.2-b02</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>Karta5</finalName>
