--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -1,6 +1,12 @@
 # DataSource
  
 ds.database-driver=com.mysql.jdbc.Driver
-ds.url=jdbc:mysql://localhost:3306/fishing_card
+ds.url=jdbc:mysql://localhost:3306/fishing_card?useUnicode=yes&characterEncoding=UTF-8 
 ds.username=karta_user
 ds.password=user_karta
+ds.connectionCollation=utf8_general_ci
+ds.characterSetResults=utf8
+ds.characterEncoding=utf-8
+ds.sqlScriptEncoding=UTF-8
+
+# uwaga na kodowanie danych do bazy. ma być ds.url=jdbc:mysql://localhost:3306/JakaśBaza?useUnicode=yes&characterEncoding=UTF-8 
