--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.2.2.Final</version>
+</dependency>
 
 	</dependencies>
 	<build>
