--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,12 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
+		
+	  	<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>1.5.2.RELEASE</version>
+        </dependency>   
 
 	</dependencies>
 	<build>
