--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -9,4 +9,6 @@ ds.characterSetResults=utf8
 ds.characterEncoding=utf-8
 ds.sqlScriptEncoding=UTF-8
 
-# uwaga na kodowanie danych do bazy. ma być ds.url=jdbc:mysql://localhost:3306/JakaśBaza?useUnicode=yes&characterEncoding=UTF-8 
+# uwaga na kodowanie danych do bazy. ma być ds.url=jdbc:mysql://localhost:3306/JakaśBaza?useUnicode=yes&characterEncoding=UTF-8
+
+ds.name=service@local.com 
