2018-07-23 Basztowa: Poprawiono ścieżkę Context Path, jak i alert dla niepoprawnych haseł w resetPassword

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<artifactId>Karta5</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Karta5 Maven Webapp</name>
+	<!-- <name>Karta5 Maven Webapp</name> -->
+	<name>karta5</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
