--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 # Dane do konfiguracji aplikacji Karta Wedkarska
 
-service.name=wsparcie@localhost.com
+# service.name=wsparcie@localhost
+service.name=wsparcie@localhost
