--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 # Dane do konfiguracji aplikacji Karta Wedkarska
+# service.name to adres mailowy z którego wysylane sa wiadomosci do uzytkowników
 
 # service.name=wsparcie@localhost
 service.name=wsparcie@localhost
