2018-09-19 Basztowa zamiany w class EmailServiceImpl i propertis. Wysyłanie mail

--- a/src/main/resources/aplication.properties
+++ b/src/main/resources/aplication.properties
@@ -1,2 +1,9 @@
 forgot=:8080/karta5/userInfo/
 service.name=service@Ala ma kota
+# ustawienia dla poczty
+spring.mail.host=poczta.interia.pl
+spring.mail.port=465
+spring.mail.username=waldi_kl@interia.pl
+spring.mail.password=waldi_kl11
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
