--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<artifactId>Karta5</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Karta5 Maven Webapp</name>
+	<!-- <name>Karta5 Maven Webapp</name> -->
+	<name>karta5</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -188,12 +189,26 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-		
-	  	<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-            <version>1.5.2.RELEASE</version>
-        </dependency>   
+
+
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-mail</artifactId> 
+			<version>1.5.2.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-mail</artifactId> <version>2.0.1.RELEASE</version> 
+			</dependency> 
+			 
+			<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter</artifactId> 
+			<version>1.5.7.RELEASE</version>
+			</dependency> 
+			
+			<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-mail</artifactId> 
+			<version>1.5.7.RELEASE</version>
+			</dependency>  -->
+
+
 
 	</dependencies>
 	<build>
