--- a/src/main/resources/aplication.properties
+++ b/src/main/resources/aplication.properties
@@ -1,7 +1,8 @@
 forgot=:8080/karta5/userInfo/
 service.name=service@Ala ma kota
 # ustawienia dla poczty
-spring.mail.host=smtp.localhost
+#spring.mail.host=smtp.localhost
+spring.mail.host=smtp.10.84.32.43
 spring.mail.port=465
 spring.mail.username=wsparcie@localhost
 spring.mail.password=1234
