--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,4 +2,4 @@
 # service.name to adres mailowy z którego wysylane sa wiadomosci do uzytkowników
 
 # service.name=wsparcie@localhost
-service.name=wsparcie@localhost
+#service.name=wsparcie@localhost
