--- a/pom.xml
+++ b/pom.xml
@@ -194,20 +194,16 @@
 		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-mail</artifactId> 
 			<version>1.5.2.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
 			<artifactId>spring-boot-starter-mail</artifactId> <version>2.0.1.RELEASE</version> 
-			</dependency> 
-			 
-			<dependency> 
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter</artifactId> 
-			<version>1.5.7.RELEASE</version>
-			</dependency> 
-			
-			<dependency> 
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-mail</artifactId> 
-			<version>1.5.7.RELEASE</version>
-			</dependency>  -->
+			</dependency> <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter</artifactId> 
+			<version>1.5.7.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-mail</artifactId> <version>1.5.7.RELEASE</version> 
+			</dependency> -->
 
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.10</version>
+		</dependency>
 
 
 	</dependencies>
