--- a/src/main/resources/aplication.properties
+++ b/src/main/resources/aplication.properties
@@ -1,9 +1,17 @@
 forgot=:8080/karta5/userInfo/
 # ustawienia dla poczty
 #spring.mail.host=smtp.localhost
-spring.mail.host=localhost
-spring.mail.port=25
+
+
+#spring.mail.host=localhost
+#spring.mail.port=25
 spring.mail.username=wsparcie@localhost
-spring.mail.password=1234
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.password=1234
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=waldikl74@gmail.com
+#spring.mail.password=Wkl_00665
+
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
